<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VillageVehicle</string>
    <string name="car_name">Not Paired</string>
    <string name="action_settings">Settings</string>
    <string name="scan_button">Find Vehicle</string>
    <string name="ignition_button">Off</string>
    <string name="start_button">Start</string>
    <string name="unknown_device">Unknown</string>
	<string name="title_devices">Devices</string>
	<string name="ble_not_supported">Not Supported</string>
	<string name="error_bluetooth_not_supported">Not Supported</string>
	<string name="lock_button">Lock</string>
	<string name="bt_init_button">InitBt</string>
</resources>
